--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
+    <form class="form js-search-form">
+      <div class="form-group">
+        <input
+          class="form-input"
+          type="text"
+          name="query"
+          placeholder="Search images..."
+        />
+      </div>
+
+      <button class="btn-submit" type="submit">Search</button>
+    </form>
+
+    <span class="loader is-hidden">L &nbsp; ading</span>
+    <div class="gallery">
+      <ul class="list-photo"></ul>
+    </div>
+    <span class="loader-load-more is-hidden" id="loader"></span>
+
+    <button class="load-more is-hidden" type="button" data-action="load-more">
+      Load More
+    </button>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
